Test database configurations for PostgreSQL and MySQL.
Added special case for MySQL when case sensitive ordering should be done.

--- a/spec/support/database.yml
+++ b/spec/support/database.yml
@@ -1,3 +1,11 @@
 sqlite3:
   adapter: sqlite3
   database: ":memory:"
+  
+postgresql:
+  adapter: postgresql
+  database: ar_orderable_test
+  
+mysql:
+  adapter: mysql
+  database: ar_orderable_test
